--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,6 @@ h3 {
 	border: 5px solid black;
 	border-radius: 15px;
 	background-color: white;
-	text-align: -webkit-center;
 }
 
 .paginator-buttons {
@@ -46,8 +45,10 @@ h3 {
 	border-radius: 15px
 }
 
-.button-paginator:hover {
-	cursor: pointer;
+.button-current {
+	background-color: black;
+	color: #fae62f;
+	font-weight: bold;
 }
 
 .button-close {
@@ -60,10 +61,6 @@ h3 {
     line-height: 2;
 }
 
-.button-close:hover {
-	cursor: pointer;
-}
-
 .button-back {
 	width: 100%;
 	background: #ededed;
@@ -71,8 +68,18 @@ h3 {
     line-height: 2;
 }
 
-.button-back:hover {
+.button-back:hover, .button-film:hover, .button-close:hover, .button-paginator:hover {
 	cursor: pointer;
+}
+
+.button-film {
+	display: flex;
+	margin: 5px;
+	background: black;
+    color: white;
+    height: 30px;
+    line-height: 2;
+    border: 0;
 }
 
 .character {
@@ -105,6 +112,7 @@ h3 {
 	position: absolute;
 	width: 45vw;
 	height: 400px;
+	max-height: 600px;
 	border: 5px solid black;
 	border-radius: 15px;
 	right: 15px;
@@ -142,6 +150,10 @@ h3 {
 .film-description {
 	text-align: justify;
 	margin: 10px;
+	transform: perspective(300px) rotateX(20deg);
+  	transform-origin: 50% 100%;
+  	color: #fae62f;
+  	text-shadow: 0 1px 0 #949494;
 }
 
 .loader {
@@ -151,7 +163,10 @@ h3 {
   width: 40px;
   height: 40px;
   animation: spin 2s linear infinite;
+  margin: auto;
+  margin-top: 10px;
 }
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
